# crossref-utils

./: README.md
crossref-data-file-indexer/: Cargo.toml  README.md
crossref-data-file-indexer/src/: main.rs
crossref-data-file-organizer/: Cargo.toml  README.md
crossref-data-file-organizer/src/: main.rs
crossref-data-file-sampler/: Cargo.toml  README.md
crossref-data-file-sampler/src/: main.rs
crossref-fast-field-parse/: README.md
crossref-fast-field-parse/src/: main.rs
strip-or-replace-data-file-index-file-paths/: Cargo.toml  README.md
strip-or-replace-data-file-index-file-paths/src/: main.rs
