[package]
name = "crossref-data-file-indexer"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3" # Added CSV crate
flate2 = "1.0"
glob = "0.3"
indicatif = "0.17"
log = "0.4"
num_cpus = "1.16" # Added num_cpus
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.3"
time = { version = "0.3", features = ["macros"] }