[package]
name = "crossref-data-file-organizer"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
glob = "0.3"
indicatif = "0.17"
log = "0.4"
num_cpus = "1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0"
time = { version = "0.3", features = ["macros"] }
uuid = { version = "1.8", features = ["v4"] }
dashmap = "5.5"
lasso = "0.7"