[package]
name = "crossref-data-file-sampler"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
glob = "0.3"
indicatif = { version = "0.17", features = ["rayon"] }
log = "0.4"
num_cpus = "1.16"
rand = "0.8"
rayon = "1.10"
simple_logger = "5.0"
time = { version = "0.3", features = ["macros"] }